Fix T46624: Preview is not always correctly updated

It is possible that preview was not updated to correspond a
new context when width of preview is the same for two contexts.